--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.h2.console.path=/h2-console
 # jwt
 forum.jwt.secret=&VM4VBS=&!VT?7f?_QM#dg9!REaS#Eq=vRerVKSx3Z&a=kMNh^HBLyFVPHxcL^@+RYfTA=MS-g_ptJ5kk8?FLX3PP5u2Dhrz+__nTSuj@gkNbVGkp%3rr#t#UwmtrfSxwar#SGY4pk?wZy265qUvB6AW!bagxqRmzgs=c2R@-%vWPsaq5TJ6rYNUgS$R?LXwsMtSuAh%vJ!%v-6juJE4ncxzPau#XU?h5T?wG5PstJK%UcEjLB&S?23AKHRSqs56
 forum.jwt.expiration=86400000
+
+# actuator
+management.endpoint.health.show-details=always
+management.endpoint.web.exposure.include=*
+info.app.name=@project.name@
+info.app.version=@project.versiom@
+
+# spring boot admin server
+spring.boot.admin.client.url=http://localhost:8081
