adicionando parametros a variaveis de ambiente

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 # datasource
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:alura-forum
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=${FORUM_DATABASE_URL}
+spring.datasource.username=${FORUM_DATABASE_USERNAME}
+spring.datasource.password=${FORUM_DATABASE_PASSWORD}
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -13,7 +13,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # jwt
-forum.jwt.secret=&VM4VBS=&!VT?7f?_QM#dg9!REaS#Eq=vRerVKSx3Z&a=kMNh^HBLyFVPHxcL^@+RYfTA=MS-g_ptJ5kk8?FLX3PP5u2Dhrz+__nTSuj@gkNbVGkp%3rr#t#UwmtrfSxwar#SGY4pk?wZy265qUvB6AW!bagxqRmzgs=c2R@-%vWPsaq5TJ6rYNUgS$R?LXwsMtSuAh%vJ!%v-6juJE4ncxzPau#XU?h5T?wG5PstJK%UcEjLB&S?23AKHRSqs56
+forum.jwt.secret=${FORUM_JWT-SECRET}
 forum.jwt.expiration=86400000
 
 # actuator
